# OpenViking

./: test_chat_command.py  test_chat_integration.py
bot/: README.md  README_CN.md  pyproject.toml
bot/scripts/: restart_openviking_server.sh
bot/vikingbot/: __init__.py
bot/vikingbot/agent/: context.py  loop.py  memory.py  skills.py
bot/vikingbot/agent/tools/: factory.py  ov_file.py
bot/vikingbot/bus/: events.py  queue.py
bot/vikingbot/channels/: base.py  chat.py  dingtalk.py  discord.py  feishu.py  manager.py  openapi.py  openapi_models.py  qq.py  single_turn.py  stdio.py  telegram.py
bot/vikingbot/cli/: commands.py
bot/vikingbot/config/: loader.py  schema.py
bot/vikingbot/hooks/builtins/: openviking_hooks.py
bot/vikingbot/integrations/: langfuse.py
bot/vikingbot/openviking_mount/: ov_server.py  viking_fuse.py
bot/vikingbot/providers/: litellm_provider.py
bot/vikingbot/sandbox/: manager.py
bot/vikingbot/sandbox/backends/: aiosandbox.py  direct.py  opensandbox.py
bot/vikingbot/session/: manager.py
bot/vikingbot/utils/: helpers.py  tracing.py
bot/workspace/: TOOLS.md
crates/ov_cli/: Cargo.toml
crates/ov_cli/src/: main.rs
crates/ov_cli/src/commands/: chat.rs  mod.rs
examples/openclaw-memory-plugin/: INSTALL-ZH.md  INSTALL.md  install.ps1  install.sh
examples/openclaw-plugin/: config.ts
openviking/models/vlm/backends/: openai_vlm.py
openviking/server/: app.py  bootstrap.py  config.py
openviking/server/routers/: __init__.py  bot.py
openviking_cli/cli/commands/: chat.py
openviking_cli/client/: http.py
openviking_cli/utils/config/: open_viking_config.py
tests/unit/: test_openai_vlm_streaming.py
